
2013-August-18 Struan Robertson
	
	* AnalyticalRepresentation.cpp, ipropyl_AR.xml: Update of parameter
	reading method and example for Chebyshev representation.

2013-August-18 Struan Robertson
	
	* AssociationReaction.cpp/.h, CollisionOperator.cpp/.h, System.cpp: 
	Re-working of method to use the equilibrium population to determine 
	energy cut-off.

	* examples/benzene_oxidation_test.xml: Input file altered to test
	above method.

2013-August-15 Chris Morley

	* src/plugins/DefinedTunnelingCoefficients.cpp: modified for new plugin
	parsing format
	* examplesSchema/DefinedTunellingCoefficients,
	examplesSchema/DefinedTunellingCoefficients/OH+methanol.xml: updated

	* schemas/mesmer.xsd, schemas/mesmerPlugins.xsd: Add SensitivityAnalysis
	DefinedTunnelingCoefficients, + minor tweaks.

	* src/plugins/ExponentialDown.cpp: reversed a change by Struan which
	prevented default being used. But what was the problem it was solving?
	* src/Reaction.cpp: minor comment and text changes

	* src/CollisionOperator.cpp(SetMaximumCellEnergy): replace some doubles by
	unsigned ints to avoid compiler warnings. 

2013-August-11 Struan Robertson
	
	* System.cpp/*.h, SensitivityAnalysis.cpp: Sensitivity analysis plugin
	updated to generated data using Sobol random vectors to perturb fitted
	parameters.

2013-August-10 Struan Robertson
	
	* Sobol.cpp/*.h, UnitTests.cpp: Addition of Sobol random number sequence.

2013-July-28 Struan Robertson
	
	* CollisionOperator.cpp, System.cpp, AnalyticalRepresentation.cpp: 
	Addition of method to calculate rate coefficients in bulk as required
	for analytical representation.

2013-July-27 Struan Robertson
	
	* CollisionOperator.cpp, System.cpp: Bug fix for grain size/grain number
	change with temperature (modified from Robin's original).

2013-July-24 Chris Morley

	Support for new format of plugin data. Not all plugins done yet.
	* schemas/mesmer.xsd,schemas/mesmerPlugins.xsd: updated.
	* schemas/schemaNotes.txt: added.